--- a/src/locale/sv_SWE.json
+++ b/src/locale/sv_SWE.json
@@ -7,7 +7,11 @@
             "1": "startsida",
             "404": "Här var det tomt"
         },
-        "/": {}
+        "/": {},
+        "groups": {
+            "0": "Grupper",
+            "1": "Grupp"
+        }
     },
     "navbar": {
         "0": "Lag",
