FIX: No need for Group in locale and wrong API key in schema

--- a/src/locale/da_DK.json
+++ b/src/locale/da_DK.json
@@ -9,8 +9,7 @@
         },
         "/": {},
         "groups": {
-            "0": "Grupper",
-            "1": "Gruppe"
+            "0": "Grupper"
         }
     },
     "navbar": {
