--- a/src/locale/sv_SWE.json
+++ b/src/locale/sv_SWE.json
@@ -9,8 +9,7 @@
         },
         "/": {},
         "groups": {
-            "0": "Grupper",
-            "1": "Grupp"
+            "0": "Grupper"
         }
     },
     "navbar": {
