--- a/src/locale/da_DK.json
+++ b/src/locale/da_DK.json
@@ -10,6 +10,13 @@
         "/": {},
         "groups": {
             "0": "Grupper"
+        },
+        "group": {
+            "0": "Stillinger",
+            "1": "V",
+            "2": "U",
+            "3": "T",
+            "4": "Kommende kampe"
         }
     },
     "navbar": {
