--- a/locale/en_EN.json
+++ b/locale/en_EN.json
@@ -20,6 +20,10 @@
             "5": "Latest matches",
             "06": "June",
             "07": "July"
+        }, 
+        "search": {
+            "06": "June",
+            "07": "July"
         }
     },
     "navbar": {
